Fix code for Czech language (#6514)
Use the correct ISO 639-1 code: `cs` and not `cz` (which is the country)
https://www.loc.gov/standards/iso639-2/php/langcodes_name.php?iso_639_1=cs

--- a/docs/i18n/templates/freshrss.pot
+++ b/docs/i18n/templates/freshrss.pot
@@ -6342,7 +6342,7 @@ msgid ""
 "| Language (English name) | Language (Endonym) | Ordered by language code "
 "(ISO-639-1) |\n"
 "|:------------------------|:-----------------------|:-------------------------------------|\n"
-"| Czech                   | Čeština                | cz                                   "
+"| Czech                   | Čeština                | cs                                   "
 "|\n"
 "| German                  | Deutsch                | de                                   "
 "|\n"
